# b2s2

./: .gitattributes  .gitignore  .gitmodules  main.cpp  meson.build
src/: allocation.cpp  allocation.hpp  common.cpp  common.hpp  file_reader.cpp  file_reader.hpp  main.cpp  shader.cpp  shader.hpp
src/scripts/: shader_gen.py
src/shaders/: vertex.glsl
subprojects/: cmft.wrap
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
